fix for input+button issue on iPhone (the button was slightly lower then the input)

--- a/frontend/react/src/index.css
+++ b/frontend/react/src/index.css
@@ -99,6 +99,10 @@ aside.participants {
     color: var(--primary-color-transparent-50);
 }
 
+.input-with-btn-container {
+    display: flex;
+}
+
 button,
 input {
     font-family: inherit;
